# archcode

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
refactoring/: PLAYBOOK_RULES.md  PLAYBOOK_WORKFLOW.md  README.md  SMELLS.md
refactoring/recipes/: dependency-inversion.md  extract-class.md  extract-function.md  introduce-parameter-object.md  move-method.md  replace-conditional-with-polymorphism.md
refactoring/semgrep-rules/: solid-smells.yml
src/: agent.rs  compact.rs  cost.rs  event.rs  main.rs  markdown.rs  session.rs  spinner.rs  theme.rs  utils.rs
src/config/: mod.rs
src/guard/: agent.rs  manager.rs  mod.rs  rules.rs
src/kg/: graph.rs  lint.rs  manager.rs  mod.rs  parser.rs  tools.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs
src/refactor/: detector.rs  mod.rs  tools.rs
src/reminder/: mod.rs
src/skills/: mod.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  manager.rs  mod.rs  read.rs  todo.rs  web_search.rs  write.rs
